<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:paddingBottom="8dp"
    android:paddingTop="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bckgr_common"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvItemDefaultCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:drawablePadding="4dp"
            android:text="@string/card_item_default"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
            android:textColor="@color/orange"
            android:textSize="16sp"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/ibItemEdit"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:tint="@color/black"
            app:srcCompat="@drawable/ic_edit"
            tools:layout_editor_absoluteX="222dp"
            tools:layout_editor_absoluteY="20dp" />

        <TextView
            android:id="@+id/tvItemCardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvItemDefaultCard"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/llItemCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvItemCardName"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:text="@string/card_item_number"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvItemCardNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="TextView"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/ivItemCardImage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                app:srcCompat="@drawable/ic_mastercard" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llItemExpire"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llItemCardNumber"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/card_item_expiry"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvItemExpire"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="TextView"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>